@@ -1,3 +1,12 @@
+2016-01-07  Jim Fowler  <jrf@Biblion>
+
+	* Tools/bookentry/xml/JournalFile_test.xml: modified to support
+	new journalfile.xsd.
+
+	* Tools/bookentry/xml/journalfile.xsd: Added Designators element
+	and moved ISSN and ADSDesignator under it.  Changed ADSDesignator
+	to ADS_Bibcode.
+
 2016-01-05  Jim Fowler  <jrf@Biblion>
 
 	* Tools/bookentry/journalWin.py (JournalEntry.setFocusChanged):
